# two-party-secure-communication

./: .gitignore  README.md  circuit_combinatoire.py  circuit_graph  elGamal.py  log_discret.py  node.py  ot_protocol.py  pyproject.toml  requirements.txt  utils.py
src/: __init__.py  elGamal.py  ot_protocol.py
src/circuit/: circuit.py  etiquette.py  node.py
src/circuit_combinatoire/: circuit_combinatoire.py  circuit_max.py  node.py
src/garbled_circuit/: ctr.py  garbler.py
src/test/garbled_circuit/: test_ctr.py
src/transfert_inconscient/: elGamal.py  log_discret.py  ot_protocol.py
test/: test_elgamal.py  test_ot_protocol.py
test/circuit_combinatoire/: circuit_max_test.py  test_circuit_max.py
test/garbled_circuit/: test_ctr.py  test_garbler.py
test/transfert_inconscient/: test_elgamal.py  test_ot_protocol.py
utils/: binary.py  porte_logique.py
