[project]
name = "calcul-biparti-et-transfert-inconscient-groupe-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamed BEN EL MOSTAPHA", email = "benelmed36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]